--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="keyword">Keyword</string>
+    <string name="enter_keyword">Enter Keyword</string>
+    <string name="category">Category</string>
+    <string name="distance">Distance</string>
+    <string name="from">From</string>
+    <string name="_10">10</string>
+    <string name="current_location">Current location</string>
+    <string name="other_specify_location">Other, Specify Location</string>
+    <string name="typw_in_the_location">Typw in the Location</string>
+    <string name="search">Search</string>
+    <string name="clear">Clear</string>
 </resources>
