--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,12 @@
         <item>Kilometers</item>
     </string-array>
     <string name="title_activity_detail_page">DetailPageActivity</string>
+    <string name="event">Event</string>
+    <string name="artist_s">Artist(s)</string>
+    <string name="venue">VENUE</string>
+    <string name="upcoming">Upcoming</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
