--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textview">TextView</string>
+    <string name="name">Name</string>
+    <string name="followers">Followers</string>
+    <string name="popularity">Popularity</string>
+    <string name="check_at">Check At</string>
+    <string name="spotify">Spotify</string>
 
 </resources>
