--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,7 @@
     <string name="popularity">Popularity</string>
     <string name="check_at">Check At</string>
     <string name="spotify">Spotify</string>
+    <string name="favorite">favorite</string>
+    <string name="twitter" />
 
 </resources>
