--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
         <item>Default</item>
         <item>Event Name</item>
         <item>Time</item>
-        <item>Atrist</item>
+        <item>Artist</item>
         <item>Type</item>
     </string-array>
 
